padding-alignment fixed

--- a/css/brackets.io.css
+++ b/css/brackets.io.css
@@ -268,6 +268,7 @@ blockquote p {
 .nav-left-menu{
   display: flex;
   align-items: center;
+  padding-left: 15%;
 }
 
 .nav-right-menu{
